addons/cluster-roles/control-plane/addons/network-policies/default.yaml
# default: No workloads expected — lock it down
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
